--- a/latex_source/capitolo4.tex
+++ b/latex_source/capitolo4.tex
@@ -2,4 +2,59 @@
 \label{capitolo4}
 \thispagestyle{empty}
 
-\noindent %%TODO Cap 4
+\textit{In questo Capitolo verrà descritta l’architettura software dello strumento realizzato. Inizialmente verrà analizzato l’ambiente di sviluppo software. Successivamente verrano mostrati i principi alla base della programmazione per microcontrollore e FPGA. Infine, verranno illustrate e descritte le funzionalità implementate su microcontrollore ed FPGA.}
+
+\section{Ambiente di sviluppo LabVIEW}
+%%TODO Cap 4
+\section{Sistema Real-Time e FPGA}
+
+	\subsection{Sistema Real-Time}
+
+		\subsubsection{Sistema Operativo Real-Time}
+
+			\paragraph{VxWorks}
+
+		\subsubsection{LabVIEW Real-Time}
+
+	\subsection{Progettazione e programmazione dell'FPGA}
+		
+		\subsubsection{Linguaggi di descrizione dell'Hardware (HDL)}
+		
+		\subsubsection{Sintesi Hardware}
+		
+		\subsubsection{High-Level Synthesis (HLS)}
+		
+		\subsubsection{LabVIEW FPGA}
+		
+\section{Analisi teorica degli algoritmi implementati}
+
+	\subsection{Algoritmo di FFT}
+		
+	\subsection{Algoritmo di FFT Interpolata}
+		
+	\subsection{Misura di distanza}
+	
+\section{Architettura Software}
+
+	\subsection{FPGA}
+	
+		\subsubsection{Implementazione software}
+		
+			\paragraph{Design pattern utilizzati}
+		
+				\subparagraph{Producer-consumer}
+			
+				\subparagraph{4-Wire Handshake}
+			
+			\paragraph{Fixed Point}
+	
+	\subsection{Microcontrollore}
+	
+		\subsubsection{Implementazione software}
+	
+	\subsection{Comunicazione tra FPGA e Microcontrollore}
+		
+		
+
+
+
