fix intro cap 4

--- a/latex_source/capitolo4.tex
+++ b/latex_source/capitolo4.tex
@@ -2,7 +2,7 @@
 \label{capitolo4}
 \thispagestyle{empty}
 
-\textit{In questo Capitolo verrà descritta l’architettura software dello strumento realizzato. Inizialmente verrà analizzato l’ambiente di sviluppo software. Successivamente verrano mostrati i principi alla base della programmazione per microcontrollore e FPGA. Infine, verranno illustrate e descritte le funzionalità implementate su microcontrollore ed FPGA.}
+\textit{In questo Capitolo verrà descritta l’architettura software dello strumento realizzato. Inizialmente verrà analizzato l’ambiente di sviluppo software. Successivamente verrano mostrati i principi alla base della programmazione per microcontrollore e FPGA. Infine, verranno illustrate e descritte le funzionalità implementate su FPGA e microcontrollore.}
 
 \section{Ambiente di sviluppo LabVIEW}
 %%TODO Cap 4
@@ -53,8 +53,3 @@
 		\subsubsection{Implementazione software}
 	
 	\subsection{Comunicazione tra FPGA e Microcontrollore}
-		
-		
-
-
-
