add foto strumento cap3

--- a/latex_source/capitolo3.tex
+++ b/latex_source/capitolo3.tex
@@ -2,7 +2,7 @@
 \label{capitolo3}
 \thispagestyle{empty}
 
-\textit{In questo Capitolo verrà descritta l'architettura hardware dello strumento realizzato. Prima verrà analizzata brevemente la parte analogica dello strumento. Successivamente verrà descritta la parte di conversione analogico-digitale e digitale-analogico soffermandoci prima sulle architetture dei convertitori presenti in letteratura e poi su quelle presenti nello strumento. Infine verrà presentata la parte digitale motivando la scelta dell'uso di una scheda di prototipazione contenente FPGA e microcontrollore.}
+\textit{In questo Capitolo verrà descritta l'architettura hardware dello strumento realizzato. Prima verrà analizzata brevemente la parte analogica dello strumento. Successivamente verrà descritta la parte di conversione analogico-digitale e digitale-analogico soffermandoci prima sulle architetture dei convertitori presenti in letteratura e poi su quelle presenti nello strumento. Infine verrà presentata la parte digitale motivando la scelta dell'uso di una scheda di prototipazione contenente FPGA e microncontrollore.}
 
 \section{Struttura complessiva dello strumento}
 Lo strumento di misura progettato in questo elaborato è un misuratore \textit{contactless} di distanza. Lo scopo è realizzare un sistema \textit{embedded} in grado di gestire in modo autonomo tutta la misura, dal controllo della sorgente laser all'acquisizione ed elaborazione del segnale interferometrico.
@@ -12,8 +12,7 @@ Per sistema \textit{embedded}, si intende un sistema di elaborazione progettato 
 Il principio fisico per il quale è possibile effettuare una misura è stato descritto nel Capitolo \ref{capitolo2}.
 \begin{figure}  
   \begin{center}
-  %%TODO Cap3: Foto finale dello strumento
-    %\includegraphics[scale=0.5]{}
+    \includegraphics[scale=0.1]{cap3/fotostrum}
     \caption{Risultato finale del misuratore realizzato}
     \label{fotorisfin}
   \end{center}
